# sqlx-serialization-panic-reproducer

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/: 20230904085700_json.sql
src/: main.rs
