[package]
name = "sqlx-serialization-panic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["migrate", "json", "macros", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.32.0", features = ["macros", "rt"] }
